--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "jquery": "^3.1.1",
     "mongoose": "^5.9.7",
     "react-awesome-modal": "^2.0.5",
-    "request": "^2.81.0"
+    "request": "^2.81.0",
+    "webpack": "^4.28.3"
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -46,6 +47,6 @@
     "react-scripts": "^2.1.2",
     "style-loader": "^0.23.1",
     "twilio": "^3.33.2",
-    "webpack": "^3.12.0"
+    "webpack": "^4.28.3"
   }
 }
